--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "vscode": "^1.32.0"
   },
+  "private": true,
   "repository": {
     "url": "https://github.com/pompomon/vscode-extension-bongo-cat"
   },
@@ -23,9 +24,10 @@
     "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc -watch -p ./",
     "package": "vsce package",
-    "release": "node ./scripts/release.js"
+    "test": "echo test"
   },
   "devDependencies": {
+    "@semantic-release/github": "^7.0.5",
     "@types/node": "^12.12.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
@@ -35,5 +37,20 @@
   },
   "dependencies": {
     "@octokit/core": "^3.1.2"
-  }
+  },
+	"release": {
+		"branches": "master",
+		"verifyConditions": [
+			"@semantic-release/github"
+		],
+		"publish": [
+			"@semantic-release/github"
+		],
+		"success": [
+			"@semantic-release/github"
+		],
+		"fail": [
+			"@semantic-release/github"
+		]
+	}
 }
