--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "echo test"
   },
   "devDependencies": {
+    "@semantic-release/git": "^7.0.5",
     "@semantic-release/github": "^7.0.5",
     "@types/node": "^12.12.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
@@ -41,7 +42,11 @@
   "release": {
     "branches": "master",
     "verifyConditions": [
-      "@semantic-release/github"
+      "@semantic-release/github",
+      "@semantic-release/git"
+    ],
+    "prepare": [
+      "@semantic-release/git"
     ],
     "publish": [
       "@semantic-release/github"
