--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         {
           "assets": [
             "CHANGELOG.md",
-            "package.json"
+            "bongo-cat-*.vsix"
           ],
           "message": "chore(release): set `package.json` to ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
