--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "test": "echo test"
   },
   "devDependencies": {
-    "semantic-release": "^17.0.0",
-    "semantic-release-vsce": "^2.1.0",
+    "@semantic-release/github": "^7.0.5",
     "@types/node": "^12.12.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
@@ -42,19 +41,14 @@
   "release": {
     "branches": "master",
     "verifyConditions": [
-      "semantic-release-vsce",
       "@semantic-release/github"
     ],
-    "prepare": {
-      "path": "semantic-release-vsce",
-      "packageVsix": true
-    },
     "publish": [
-      "semantic-release-vsce",
-      {
-        "path": "@semantic-release/github",
-        "assets": "*.vsix"
-      }
+      ["@semantic-release/github", {
+        "assets": [
+          {"path": "bongo-cat*.vsix", "label": "VSIX distribution"}
+        ]
+      }]
     ],
     "success": [
       "@semantic-release/github"
