--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bongo-cat",
   "description": "Bongo cat decorator",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "publisher": "pompomon",
   "license": "MIT",
   "engines": {
@@ -23,12 +23,11 @@
     "compile": "tsc -p ./",
     "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc -watch -p ./",
-    "package": "vsce package",
+    "package": "vsce package -o bongocat.vsix",
     "test": "echo test"
   },
   "devDependencies": {
-    "semantic-release": "^17.0.0",
-    "semantic-release-vsce": "^2.1.0",
+    "@semantic-release/github": "^7.0.5",
     "@types/node": "^12.12.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
@@ -42,19 +41,20 @@
   "release": {
     "branches": "master",
     "verifyConditions": [
-      "semantic-release-vsce",
       "@semantic-release/github"
     ],
-    "prepare": {
-      "path": "semantic-release-vsce",
-      "packageVsix": true
-    },
     "publish": [
-      "semantic-release-vsce",
-      {
-        "path": "@semantic-release/github",
-        "assets": "*.vsix"
-      }
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "bongocat.vsix",
+              "label": "VSIX distribution"
+            }
+          ]
+        }
+      ]
     ],
     "success": [
       "@semantic-release/github"
