--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "typescript": "^3.9.4",
     "@types/vscode": "^1.32.0"
   },
-  "dependencies": {
-    "@octokit/core": "^3.1.2"
-  },
+  "dependencies": {},
   "release": {
     "branches": "master",
     "verifyConditions": [
